--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <!-- <link rel="stylesheet" href="bootstrap-3-arabic-master/dist/css/bootstrap-arabic.min.css"> -->
          <link href="Flat-UI/dist/css/flat-ui.css" rel="stylesheet">
          <link href="Flat-UI" rel="stylesheet">
+         <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
         <link rel="stylesheet" href="css/css.css">
+        <link rel="stylesheet" href="css/converted-files/font.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     </head>
     <body>
         <div class="container-fluid">
@@ -25,28 +28,35 @@
                     </div>
                     <a href="#this" class="fm fm-play-thin play-btn" data-youtube="_hnJcTENSsc" data-toggle="modal" data-target="#modal-youtube"></a>
                 </div> -->
+
+                <!-- <img src="shutterstock_560320879.png" class="fadedbg img-responsive" alt=""> -->
                 <div class="bg"></div>
-                <img src="shutterstock_433744150.png" class="img-responsive" alt="">
-                <div class="action play">
-                    <a href="#" title="Play"><i class="fa fa-play"></i></a>
+                <div class="hearts"></div>
+                <img src="shutterstock_433744150.png" class="hands img-responsive animated slideInDown" alt="">
+<!--                 <div class="action play">
+    <a href="#" title="Play"><i class="fa fa-play"></i></a>
+</div> -->
+                <div class="text text-center">
+                    <img src="logo.png" alt="">
+                    <p>الموقع الخاص بالمتبرعين بالدم</p>
                 </div>
                 <div class="text-center button">
-                    <a class="btn btn-hg btn-danger btn-wide"> Save a life
-                        <span class="btn-tip"><i class="fa fa-heartbeat"></i></span>
+                    <p>تبرعك بالدم... قد ينقذ حياة مريض بحاجته</p>
+                    <p class="quran">{{وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا...}}</p>
+                    <a class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين  بالدم
                     </a>
                 </div>
+<!--                 <div class="btn-border">
+                     ﺗﺒﺮﻉ  <i class="fa fa-heartbeat"></i>
+                </div> -->
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">1</div>
-                <div class="col-md-6">2</div>
-            </div>
-            <h3>Donners list</h3>
+            <h4>لائحة المتبرعين</h4>
             <div class="options">
                 <div class="search">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" id="search-query-3">
+                        <input type="text" class="form-control" placeholder="بحث" id="search-query-3">
                         <span class="input-group-btn">
                             <button type="submit" class="btn"><span class="fui-search"></span></button>
                         </span>
@@ -54,7 +64,7 @@
                 </div>
                 <select class="form-control select select-primary select-block mbl">
                     <optgroup label="Profile">
-                        <option value="0">My Profile</option>
+                        <option value="0">الدار البيضاء</option>
                         <option value="1">My Friends</option>
                     </optgroup>
                     <optgroup label="System">
@@ -65,7 +75,7 @@
                 </select>
                 <select class="form-control select select-primary select-block mbl">
                     <optgroup label="Profile">
-                        <option value="0">My Profile</option>
+                        <option value="0">المغرب</option>
                         <option value="1">My Friends</option>
                     </optgroup>
                     <optgroup label="System">
@@ -78,70 +88,70 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>City</th>
-                        <th>Phone</th>
-                        <th>Blood type</th>
-                        <th>Reaching type</th>
-                        <th>Reaching time</th>
+                        <th>الإســـم</th>
+                        <th>العنــوان</th>
+                        <th>الجـــوال</th>
+                        <th>فصيلة الدم</th>
+                        <th>نوع الإتصــال</th>
+                        <th>وقت الإتصــال</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                     <tr>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
-                        <td>lorem</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
+                        <td>فـــاعـــل خيـــر</td>
                     </tr>
                 </tbody>
             </table>
