--- a/index.html
+++ b/index.html
@@ -19,23 +19,13 @@
     <body>
         <div class="container-fluid">
             <div class="banner row">
-                <!-- <div class="container">
-                    <h1>FILMORA VIDEO <br>EDITOR</h1>
-                    <p class="tip">The Best Video Editor Software Alternative <br>to Windows Movie Maker &amp; iMovie</p>
-                    <div class="action">
-                        <a class="button button-teal sys-win" href="http://download.wondershare.net/filmora-idco_full1901.exe">Free Download <i class="fm fm-try"></i></a>
-                        <a class="button button-teal sys-mac" href="http://download.wondershare.net/mac-filmora_full1938.dmg">Free Download<i class="fm fm-try"></i></a>
-                    </div>
-                    <a href="#this" class="fm fm-play-thin play-btn" data-youtube="_hnJcTENSsc" data-toggle="modal" data-target="#modal-youtube"></a>
-                </div> -->
-
                 <!-- <img src="shutterstock_560320879.png" class="fadedbg img-responsive" alt=""> -->
                 <div class="bg"></div>
                 <div class="hearts"></div>
                 <img src="shutterstock_433744150.png" class="hands img-responsive animated slideInDown" alt="">
-<!--                 <div class="action play">
-    <a href="#" title="Play"><i class="fa fa-play"></i></a>
-</div> -->
+                <!--                 <div class="action play">
+                    <a href="#" title="Play"><i class="fa fa-play"></i></a>
+                </div> -->
                 <div class="text text-center">
                     <img src="logo.png" alt="">
                     <p>الموقع الخاص بالمتبرعين بالدم</p>
@@ -46,23 +36,42 @@
                     <a class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين  بالدم
                     </a>
                 </div>
-<!--                 <div class="btn-border">
-                     ﺗﺒﺮﻉ  <i class="fa fa-heartbeat"></i>
-                </div> -->
             </div>
         </div>
         <div class="container">
+            <div class="text_panel">
+                <h4><i class="fa fa-info-circle" aria-hidden="true"></i> كيفية عمل الموقع </h4>
+                <p >
+                    الهدف من هذا الموقع هو لمساعدة محتاجي الدم بحيث يقوم المتبرع <a href="#" title="بإدخال البيانات المتعلقة به">بإدخال البيانات المتعلقة به</a> (البريد ألإلكتروني, الهاتف, فصيلة الدم...) في الموقع لدينا. بعدها يتم إدراج هذا الأخير في لائحة المتبرعين اسفله لكي يتمكن المحتاج إلى نقل دم (أو احد أقربائه) من التواصل معه.<br>
+                    لتعديل البيانات او حذفها المرجو <a href="#" title="تسجيل الدخول">تسجيل الدخول</a> الى الموقع والذهاب الى صفحة الحساب الشخصي.
+                </p>
+            </div>
             <h4>لائحة المتبرعين</h4>
             <div class="options">
-                <div class="search">
+                <button class="btn-block btn btn-primary search">
+                    بحث
+                    <i class="fa fa-search"></i>
+                </button>
+                <!--                 <div class="search">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="بحث" id="search-query-3">
                         <span class="input-group-btn">
                             <button type="submit" class="btn"><span class="fui-search"></span></button>
                         </span>
                     </div>
-                </div>
-                <select class="form-control select select-primary select-block mbl">
+                </div> -->
+                <select class="form-control select select-default select-block mbl">
+                    <optgroup label="Profile">
+                        <option value="0">فصيلة الدم</option>
+                        <option value="1">My Friends</option>
+                    </optgroup>
+                    <optgroup label="System">
+                        <option value="2">Messages</option>
+                        <option value="3">My Settings</option>
+                        <option value="4">Logout</option>
+                    </optgroup>
+                </select>
+                <select class="form-control select select-default select-block mbl">
                     <optgroup label="Profile">
                         <option value="0">الدار البيضاء</option>
                         <option value="1">My Friends</option>
@@ -73,7 +82,7 @@
                         <option value="4">Logout</option>
                     </optgroup>
                 </select>
-                <select class="form-control select select-primary select-block mbl">
+                <select class="form-control select select-default select-block mbl">
                     <optgroup label="Profile">
                         <option value="0">المغرب</option>
                         <option value="1">My Friends</option>
@@ -155,6 +164,38 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="text_panel">
+                <h4><i class="fa fa-bullhorn  fa-flip-horizontal" aria-hidden="true"></i> إدعمنا</h4>
+                <p >
+                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                    إدعمنا بنشر الموقع في المنتديات والدردشات ومواقع التواصل الإجتماعي .
+                </p>
+                <p>
+                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                    إدعمنا بوضع إعلان في موقعك.
+                </p>
+                <p>
+                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                    إدعمنا بنشر الموقع بين أصدقائك.
+                </p>
+                <p>
+                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                    إدعمنا بالدعاء لنا بظهر الغيب.
+                </p>
+                <p>
+                    <a href="#" title="للمزيد من المعلومات...">للمزيد من المعلومات...</a>
+                </p>
+            </div>
+        </div>
+        <div class="footer container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <hr>
+                        <p><a href="#">لرئيسية</a> | <a href="#">فوائد التبرع العلمية</a> | <a href="#">ثواب التبرع</a> | <a href="#">من نحن</a> | <a href="#">ادعمنا</a> | <a href="#">راسلنا </a> | <a href="#"> الخصوصية</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="Flat-UI/dist/js/flat-ui.min.js"></script>
