--- a/index.html
+++ b/index.html
@@ -19,20 +19,25 @@
     <body>
         <div class="container-fluid">
             <div class="banner row">
+                <div class="text-center account_buttons">
+                    <a class="btn ">التسجيل</a>
+                    <a class="btn">تسجيل الدخول</a>
+                </div>
+
                 <!-- <img src="shutterstock_560320879.png" class="fadedbg img-responsive" alt=""> -->
                 <div class="bg"></div>
                 <div class="hearts"></div>
                 <img src="shutterstock_433744150.png" class="hands img-responsive animated slideInDown" alt="">
-                <!--                 <div class="action play">
+                <div class="action play">
                     <a href="#" title="Play"><i class="fa fa-play"></i></a>
-                </div> -->
+                </div>
                 <div class="text text-center">
                     <img src="logo.png" alt="">
                     <p>الموقع الخاص بالمتبرعين بالدم</p>
                 </div>
                 <div class="text-center button">
                     <p>تبرعك بالدم... قد ينقذ حياة مريض بحاجته</p>
-                    <p class="quran">{{وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا...}}</p>
+                    <!-- <p class="quran">{{وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا...}}</p> -->
                     <a class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين  بالدم
                     </a>
                 </div>
