--- a/signin.html
+++ b/signin.html
@@ -17,32 +17,26 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     </head>
     <body>
-        <div class="container-fluid">
-            <div class="banner row">
-                <div class="text-center account_buttons">
-                    <a class="btn"><i class="fa fa-sign-in"></i> تسجيل الدخول</a>
-                    <a class="btn "><i class="fa fa-user"></i> حساب جديد</a>
+        <nav class="navbar navbar-default" id="menu">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <a class="logo" href="#"><img src="logo-small.png" alt=""></a>
                 </div>
-
-                <!-- <img src="shutterstock_560320879.png" class="fadedbg img-responsive" alt=""> -->
-                <div class="bg"></div>
-                <div class="hearts"></div>
-                <img src="shutterstock_433744150.png" class="hands img-responsive animated slideInDown" alt="">
-                <div class="action play">
-                    <a href="#" title="Play"><i class="fa fa-play"></i></a>
-                </div>
-                <div class="text text-center">
-                    <img src="logo.png" alt="">
-                    <p>الموقع الخاص بالمتبرعين بالدم</p>
-                </div>
-                <div class="text-center button">
-                    <p>تبرعك بالدم... قد ينقذ حياة مريض بحاجته</p>
-                    <!-- <p class="quran">{{وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا...}}</p> -->
-                    <a class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين
-                    </a>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li ><a href="#"><i class="fa fa-home" aria-hidden="true"></i> الرئيسية </a></li>
+                        <li><a href="#"><i class="fa fa-user"></i> تسجيل العضوية</a></li>
+                        <li><a href="#"><i class="fa fa-sign-in"></i> تسجيل الدخول</a></li>
+                    </ul>
                 </div>
             </div>
-        </div>
+        </nav>
         <div class="container">
             <div class="text_panel">
                 <h4><i class="fa fa-info-circle" aria-hidden="true"></i> كيفية عمل الموقع </h4>
@@ -197,7 +191,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <hr>
-                        <p><a href="#">الرئيسية</a> | <a href="#">فوائد التبرع العلمية</a> | <a href="#">ثواب التبرع</a> | <a href="#">من نحن</a> | <a href="#">ادعمنا</a> | <a href="#">راسلنا </a> | <a href="#"> الخصوصية</a></p>
+                        <p><a href="#">لرئيسية</a> | <a href="#">فوائد التبرع العلمية</a> | <a href="#">ثواب التبرع</a> | <a href="#">من نحن</a> | <a href="#">ادعمنا</a> | <a href="#">راسلنا </a> | <a href="#"> الخصوصية</a></p>
                     </div>
                 </div>
             </div>
