--- a/signin.html
+++ b/signin.html
@@ -37,153 +37,39 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <div class="text_panel">
-                <h4><i class="fa fa-info-circle" aria-hidden="true"></i> كيفية عمل الموقع </h4>
-                <p >
-                    الهدف من هذا الموقع هو لمساعدة محتاجي الدم بحيث يقوم المتبرع <a href="#" title="بإدخال البيانات المتعلقة به">بإدخال البيانات المتعلقة به</a> (البريد ألإلكتروني, الهاتف, فصيلة الدم...) في الموقع لدينا. بعدها يتم إدراج هذا الأخير في لائحة المتبرعين اسفله لكي يتمكن المحتاج إلى نقل دم (أو احد أقربائه) من التواصل معه.<br>
-                    لتعديل البيانات او حذفها المرجو <a href="#" title="تسجيل الدخول">تسجيل الدخول</a> الى الموقع والذهاب الى صفحة الحساب الشخصي.
-                </p>
-            </div>
-            <h4>لائحة المتبرعين</h4>
-            <div class="options">
-                <button class="btn-block btn btn-primary search">
-                    بحث
-                    <i class="fa fa-search"></i>
-                </button>
-                <!--                 <div class="search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="بحث" id="search-query-3">
-                        <span class="input-group-btn">
-                            <button type="submit" class="btn"><span class="fui-search"></span></button>
-                        </span>
-                    </div>
-                </div> -->
-                <select class="form-control select select-default select-block mbl">
-                    <optgroup label="Profile">
-                        <option value="0">فصيلة الدم</option>
-                        <option value="1">My Friends</option>
-                    </optgroup>
-                    <optgroup label="System">
-                        <option value="2">Messages</option>
-                        <option value="3">My Settings</option>
-                        <option value="4">Logout</option>
-                    </optgroup>
-                </select>
-                <select class="form-control select select-default select-block mbl">
-                    <optgroup label="Profile">
-                        <option value="0">الدار البيضاء</option>
-                        <option value="1">My Friends</option>
-                    </optgroup>
-                    <optgroup label="System">
-                        <option value="2">Messages</option>
-                        <option value="3">My Settings</option>
-                        <option value="4">Logout</option>
-                    </optgroup>
-                </select>
-                <select class="form-control select select-default select-block mbl">
-                    <optgroup label="Profile">
-                        <option value="0">المغرب</option>
-                        <option value="1">My Friends</option>
-                    </optgroup>
-                    <optgroup label="System">
-                        <option value="2">Messages</option>
-                        <option value="3">My Settings</option>
-                        <option value="4">Logout</option>
-                    </optgroup>
-                </select>
-            </div>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>الإســـم</th>
-                        <th>العنــوان</th>
-                        <th>الجـــوال</th>
-                        <th>فصيلة الدم</th>
-                        <th>نوع الإتصــال</th>
-                        <th>وقت الإتصــال</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                    <tr>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                        <td>فـــاعـــل خيـــر</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="text_panel supprt_us">
-                <h4><i class="fa fa-bullhorn  fa-flip-horizontal" aria-hidden="true"></i> إدعمنا</h4>
-                <p >
-                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                    إدعمنا بنشر الموقع في المنتديات والدردشات ومواقع التواصل الإجتماعي .
-                </p>
-                <p>
-                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                    إدعمنا بوضع إعلان في موقعك.
-                </p>
-                <p>
-                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                    إدعمنا بنشر الموقع بين أصدقائك.
-                </p>
-                <p>
-                    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                    إدعمنا بالدعاء لنا بظهر الغيب.
-                </p>
-                <p>
-                    <a href="#" title="للمزيد من المعلومات...">للمزيد من المعلومات...</a>
-                </p>
+        <div class="container smart_page" id="main-container" style="min-height: 624px;">
+            <div id="uploader_container"></div>
+            <div id="membership_page">
+                <div class="member_form">
+                    <div class="form-title text-center">
+                        <div class="user">
+                            <img src="user.png">
+                        </div>
+                        <h1>تسجيل العضوية</h1> </div>
+                    <form action="https://soundeals.com/users/invitation_submit" role="form" class="check_submit" id="invitation_form" method="post" accept-charset="utf-8">
+                        <input type="hidden" name="csrf_token" value="54aef55cd3eee38c028c06608a0014ed">
+                        <div class="form-body">
+                            <div class="form-group">
+                                <input class="form-control req_field nice-font-2 input-lg red_border" autocomplete="off" name="u_email" id="u_email" placeholder="البريد الإلكتروني ">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control req_field nice-font-2 input-lg red_border" autocomplete="off" name="u_email" id="u_email" placeholder="البريد الإلكتروني ">
+                            </div>
+                        </div>
+                        <div class="list-group nice-font-2">
+                            <div class="list-group-item"> يجب أن يكون البريد الإلكترونى صحيحاً لتتمكن من استكمال عملية التسجيل كما ان جميع التنبيهات ستصلك على البريد الإلكتروني لذلك تأكد أنه بريد أساسي تطلع عليه بشكل دائم </div>
+                        </div>
+                        <div class="form-sumbit">
+                            <button class="btn btn-block submit_button" type="submit"><i class="fa loading-icon"></i> إرسال</button>
+                        </div>
+                        <div class="form-tools nice-font-2">
+                            <div class="row">
+                                <div class="col-xs-6"> <a href="https://soundeals.com/forget-password">نسيت كلمة المرور ؟</a> </div>
+                                <div class="col-xs-6 text-left"> <a href="https://soundeals.com/re-activate">تفعيل الحساب</a> </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="footer container-fluid">
