--- a/TextInputEffects/index2.html
+++ b/TextInputEffects/index2.html
@@ -30,48 +30,6 @@
 					<a href="index2.html" class="current-demo">Set 2</a>
 				</nav>
 			</header>
-			<section class="content bgcolor-3">
-				<h2>Manami</h2>
-				<span class="input input--manami">
-					<input class="input__field input__field--manami" type="text" id="input-32" />
-					<label class="input__label input__label--manami" for="input-32">
-						<span class="input__label-content input__label-content--manami">Username</span>
-					</label>
-				</span>
-				<span class="input input--manami">
-					<input class="input__field input__field--manami" type="text" id="input-33" />
-					<label class="input__label input__label--manami" for="input-33">
-						<span class="input__label-content input__label-content--manami">Website</span>
-					</label>
-				</span>
-				<span class="input input--manami">
-					<input class="input__field input__field--manami" type="text" id="input-34" />
-					<label class="input__label input__label--manami" for="input-34">
-						<span class="input__label-content input__label-content--manami">Invitation Code</span>
-					</label>
-				</span>
-			</section>
-			<section class="content bgcolor-7">
-				<h2>Nariko</h2>
-				<span class="input input--nariko">
-					<input class="input__field input__field--nariko" type="text" id="input-20" />
-					<label class="input__label input__label--nariko" for="input-20">
-						<span class="input__label-content input__label-content--nariko">Username</span>
-					</label>
-				</span>
-				<span class="input input--nariko">
-					<input class="input__field input__field--nariko" type="text" id="input-21" />
-					<label class="input__label input__label--nariko" for="input-21">
-						<span class="input__label-content input__label-content--nariko">Website</span>
-					</label>
-				</span>
-				<span class="input input--nariko">
-					<input class="input__field input__field--nariko" type="text" id="input-22" />
-					<label class="input__label input__label--nariko" for="input-22">
-						<span class="input__label-content input__label-content--nariko">Invitation Code</span>
-					</label>
-				</span>
-			</section>
 			<section class="content bgcolor-1">
 				<h2>Nao</h2>
 				<span class="input input--nao">
@@ -102,28 +60,7 @@
 					</svg>
 				</span>
 			</section>
-			<section class="content">
-				<h2>Yoshiko</h2>
-				<span class="input input--yoshiko">
-					<input class="input__field input__field--yoshiko" type="text" id="input-10" />
-					<label class="input__label input__label--yoshiko" for="input-10">
-						<span class="input__label-content input__label-content--yoshiko" data-content="Bird's Color">Bird's Color</span>
-					</label>
-				</span>
-				<span class="input input--yoshiko">
-					<input class="input__field input__field--yoshiko" type="text" id="input-11" />
-					<label class="input__label input__label--yoshiko" for="input-11">
-						<span class="input__label-content input__label-content--yoshiko" data-content="Wing Span">Wing Span</span>
-					</label>
-				</span>
-				<span class="input input--yoshiko">
-					<input class="input__field input__field--yoshiko" type="text" id="input-12" />
-					<label class="input__label input__label--yoshiko" for="input-12">
-						<span class="input__label-content input__label-content--yoshiko" data-content="Beak Length">Beak Length</span>
-					</label>
-				</span>
-			</section>
-			<section class="content bgcolor-10">
+			<section class="content bgcolor-6">
 				<h2>Shoko</h2>
 				<span class="input input--shoko">
 					<input class="input__field input__field--shoko" type="text" id="input-4" />
@@ -154,6 +91,57 @@
 						<path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
 						<path d="M0,2.5c0,0,298.666,0,399.333,0C448.336,2.5,513.994,13,597,13c77.327,0,135-10.5,200.999-10.5c95.996,0,402.001,0,402.001,0"/>
 					</svg>
+				</span>
+			</section>
+			<section class="content bgcolor-4">
+				<h2>Kozakura</h2>
+				<span class="input input--kozakura">
+					<input class="input__field input__field--kozakura" type="text" id="input-7" />
+					<label class="input__label input__label--kozakura" for="input-7">
+						<span class="input__label-content input__label-content--kozakura" data-content="Name">Name</span>
+					</label>
+					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
+					</svg>
+				</span>
+				<span class="input input--kozakura">
+					<input class="input__field input__field--kozakura" type="text" id="input-8" />
+					<label class="input__label input__label--kozakura" for="input-8">
+						<span class="input__label-content input__label-content--kozakura" data-content="Email">Email</span>
+					</label>
+					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
+					</svg>
+				</span>
+				<span class="input input--kozakura">
+					<input class="input__field input__field--kozakura" type="text" id="input-9" />
+					<label class="input__label input__label--kozakura" for="input-9">
+						<span class="input__label-content input__label-content--kozakura" data-content="Website">Website</span>
+					</label>
+					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
+					</svg>
+				</span>
+			</section>
+			<section class="content">
+				<h2>Yoshiko</h2>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-10" />
+					<label class="input__label input__label--yoshiko" for="input-10">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Bird's Color">Bird's Color</span>
+					</label>
+				</span>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-11" />
+					<label class="input__label input__label--yoshiko" for="input-11">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Wing Span">Wing Span</span>
+					</label>
+				</span>
+				<span class="input input--yoshiko">
+					<input class="input__field input__field--yoshiko" type="text" id="input-12" />
+					<label class="input__label input__label--yoshiko" for="input-12">
+						<span class="input__label-content input__label-content--yoshiko" data-content="Beak Length">Beak Length</span>
+					</label>
 				</span>
 			</section>
 			<section class="content bgcolor-4">
@@ -206,38 +194,29 @@
 					<input class="input__field input__field--sae" type="text" id="input-19" />
 					<label class="input__label input__label--sae" for="input-19">
 						<i class="fa fa-fw fa-pencil icon icon--sae"></i>
-						<span class="input__label-content input__label-content--sae">Full Name</span>
+						<span class="input__label-content input__label-content--sae">Player's Name</span>
 					</label>
 				</span>
 			</section>
-			<section class="content bgcolor-4">
-				<h2>Kozakura</h2>
-				<span class="input input--kozakura">
-					<input class="input__field input__field--kozakura" type="text" id="input-7" />
-					<label class="input__label input__label--kozakura" for="input-7">
-						<span class="input__label-content input__label-content--kozakura" data-content="Name">Name</span>
+			<section class="content bgcolor-7">
+				<h2>Nariko</h2>
+				<span class="input input--nariko">
+					<input class="input__field input__field--nariko" type="text" id="input-20" />
+					<label class="input__label input__label--nariko" for="input-20">
+						<span class="input__label-content input__label-content--nariko">Username</span>
 					</label>
-					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
-						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
-					</svg>
 				</span>
-				<span class="input input--kozakura">
-					<input class="input__field input__field--kozakura" type="text" id="input-8" />
-					<label class="input__label input__label--kozakura" for="input-8">
-						<span class="input__label-content input__label-content--kozakura" data-content="Email">Email</span>
+				<span class="input input--nariko">
+					<input class="input__field input__field--nariko" type="text" id="input-21" />
+					<label class="input__label input__label--nariko" for="input-21">
+						<span class="input__label-content input__label-content--nariko">Website</span>
 					</label>
-					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
-						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
-					</svg>
 				</span>
-				<span class="input input--kozakura">
-					<input class="input__field input__field--kozakura" type="text" id="input-9" />
-					<label class="input__label input__label--kozakura" for="input-9">
-						<span class="input__label-content input__label-content--kozakura" data-content="Website">Website</span>
+				<span class="input input--nariko">
+					<input class="input__field input__field--nariko" type="text" id="input-22" />
+					<label class="input__label input__label--nariko" for="input-22">
+						<span class="input__label-content input__label-content--nariko">Invitation Code</span>
 					</label>
-					<svg class="graphic graphic--kozakura" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
-						<path d="M1200,9c0,0-305.005,0-401.001,0C733,9,675.327,4.969,598,4.969C514.994,4.969,449.336,9,400.333,9C299.666,9,0,9,0,9v43c0,0,299.666,0,400.333,0c49.002,0,114.66,3.484,197.667,3.484c77.327,0,135-3.484,200.999-3.484C894.995,52,1200,52,1200,52V9z"/>
-					</svg>
 				</span>
 			</section>
 			<section class="content bgcolor-1">
@@ -285,7 +264,7 @@
 					</label>
 				</span>
 			</section>
-			<section class="content bgcolor-3">
+			<section class="content bgcolor-2">
 				<h2>Kohana</h2>
 				<span class="input input--kohana">
 					<input class="input__field input__field--kohana" type="text" id="input-29" />
@@ -309,6 +288,30 @@
 					</label>
 				</span>
 			</section>
+			<section class="content bgcolor-3">
+				<h2>Manami</h2>
+				<span class="input input--manami">
+					<input class="input__field input__field--manami" type="text" id="input-32" />
+					<label class="input__label input__label--manami" for="input-32">
+						<span class="input__label-content input__label-content--manami">Username</span>
+					</label>
+				</span>
+				<span class="input input--manami">
+					<input class="input__field input__field--manami" type="text" id="input-33" />
+					<label class="input__label input__label--manami" for="input-33">
+						<span class="input__label-content input__label-content--manami">Website</span>
+					</label>
+				</span>
+				<span class="input input--manami">
+					<input class="input__field input__field--manami" type="text" id="input-34" />
+					<label class="input__label input__label--manami" for="input-34">
+						<span class="input__label-content input__label-content--manami">Invitation Code</span>
+					</label>
+				</span>
+			</section>
+
+
+
 			<!-- Related demos -->
 			<section class="content content--related">
 				<p>If you enjoyed this demo you might also like:</p>
