--- a/signup.html
+++ b/signup.html
@@ -49,8 +49,7 @@
                         <div class="user">
                             <img src="user.png">
                         </div>
-                        <h1>تسجيل الدخول</h1>
-                    </div>
+                        <h1>تسجيل العضوية</h1> </div>
                     <form action="https://soundeals.com/users/invitation_submit" role="form" class="check_submit" id="invitation_form" method="post" accept-charset="utf-8">
                         <input type="hidden" name="csrf_token" value="54aef55cd3eee38c028c06608a0014ed">
                         <div class="form-body">
@@ -70,6 +69,14 @@
                                     </label>
                                 </span>
                             </div>
+                            <div class="form-group">
+                                <span class="input input--ruri">
+                                    <input class="input__field input__field--ruri" type="text" id="input-26" />
+                                    <label class="input__label input__label--ruri" for="input-26">
+                                        <span class="input__label-content input__label-content--ruri">كلمة المرور مرة أخرى <strong>*</strong></span>
+                                    </label>
+                                </span>
+                            </div>
                             <!-- <div class="form-group">
                                 <span class="input input--ruri">
                                     <input class="input__field input__field--ruri" type="text" id="input-26" />
@@ -80,12 +87,11 @@
                             </div> -->
                         </div>
                         <div class="form-sumbit">
-                            <button class="btn btn-block submit_button" type="submit"><i class="fa loading-icon"></i> دخول</button>
+                            <button class="btn btn-block submit_button" type="submit"><i class="fa loading-icon"></i> تسجيل</button>
                         </div>
                         <div class="form-tools nice-font-2">
                             <div class="row">
-                                <div class="col-xs-6"> <a href="https://soundeals.com/forget-password">نسيت كلمة المرور ؟</a> </div>
-                                <div class="col-xs-6 text-left"> <a href="https://soundeals.com/re-activate">ليس لديك حساب ؟</a> </div>
+                                <div class="col-xs-6"> <a href="https://soundeals.com/forget-password">أنت عضو بالفعل ؟</a> </div>
                             </div>
                         </div>
                     </form>
